updating api defs
