# app/src/main/java/blog/openapi/app/AwsAccountCostsResource.java
@@ -1,19 +1,26 @@
 package blog.openapi.app;
 
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
+import java.time.YearMonth;
 import jakarta.ws.rs.QueryParam;
-
 import java.time.Month;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
+import blog.openapi.app.model.AwsAccount;
+import blog.openapi.app.model.AwsAccountCosts;
+import blog.openapi.app.model.MonthYearSelection;
+import blog.openapi.app.model.TimePeriod;
+import jakarta.ws.rs.ClientErrorException;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 
 @Path("/")
 public class AwsAccountCostsResource {
@@ -27,62 +34,161 @@ public class AwsAccountCostsResource {
     logger.info("Ping invoked..");
     return Response.ok().entity("Pong...").build();
   }
+  
+  @GET
+  @Path("/cost/accounts")
+  public Response getAwsCostsByAllAccountsNoParams() {
+    logger.info("getAwsCostsByAllAccounts");
+//    logger.info("END: " + end);
+
+    TimePeriod timePeriod = new TimePeriod(
+        new MonthYearSelection(Month.APRIL, 2023),
+        new MonthYearSelection(Month.MAY, 2023)
+    );
+    
+    TimePeriod timePeriod2 = new TimePeriod(
+        new MonthYearSelection(Month.APRIL, 2020),
+        new MonthYearSelection(Month.MAY, 2020)
+    );
+    
+    Set<AwsAccount> internal = new HashSet<>(List.of(
+        new AwsAccount("12345689012", "Foo", 33.22, true, timePeriod),
+        new AwsAccount("1234568229012", "Bar", 88.22, true, timePeriod)
+    ));
+    Set<AwsAccount> external = new HashSet<>(List.of(
+        new AwsAccount("143434845689012", "ExFoo", 33.22, false, timePeriod2),
+        new AwsAccount("123456854545229012", "ExBar", 88.22, false, timePeriod2)
+    ));
+    internal.addAll(external);
+    
+    
+    AwsAccountCosts awsAccountCostsForAllAccounts =
+        new AwsAccountCosts(internal, timePeriod);
+
+    return Response.ok(awsAccountCostsForAllAccounts).build();
+  }
+  
+  @GET
+  @Path("/cost/accounts")
+  public Response getAwsCostsByAllAccountsB(
+      @QueryParam("start") String start, @QueryParam("end") String end) {
+    logger.info("getAwsCostsByAllAccounts");
+    logger.info("START: " + start);
+    logger.info("END: " + end);
+
+    YearMonth startYearMonth = parseDate(start);
+
+    TimePeriod timePeriod = new TimePeriod(
+        new MonthYearSelection(Month.APRIL, 2023),
+        new MonthYearSelection(Month.MAY, 2023)
+    );
+    
+    TimePeriod timePeriod2 = new TimePeriod(
+        new MonthYearSelection(Month.APRIL, 2020),
+        new MonthYearSelection(Month.MAY, 2020)
+    );
+    
+    Set<AwsAccount> internal = new HashSet<>(List.of(
+        new AwsAccount("12345689012", "Foo", 33.22, true, timePeriod),
+        new AwsAccount("1234568229012", "Bar", 88.22, true, timePeriod)
+    ));
+    Set<AwsAccount> external = new HashSet<>(List.of(
+        new AwsAccount("143434845689012", "ExFoo", 33.22, false, timePeriod2),
+        new AwsAccount("123456854545229012", "ExBar", 88.22, false, timePeriod2)
+    ));
+    internal.addAll(external);
+    
+    
+    AwsAccountCosts awsAccountCostsForAllAccounts =
+        new AwsAccountCosts(internal, timePeriod);
+
+    return Response.ok(awsAccountCostsForAllAccounts).build();
+  }
+  
+  @GET
+  @Path("/cost/accounts")
+  public Response getAwsCostsByAllAccounts(@QueryParam("start") String start) {
+    logger.info("getAwsCostsByAllAccounts");
+    logger.info("START: " + start);
+//    logger.info("END: " + end);
+
+    YearMonth startYearMonth = parseDate(start);
+
+    TimePeriod timePeriod = new TimePeriod(
+        new MonthYearSelection(Month.APRIL, 2023),
+        new MonthYearSelection(Month.MAY, 2023)
+    );
+    
+    TimePeriod timePeriod2 = new TimePeriod(
+        new MonthYearSelection(Month.APRIL, 2020),
+        new MonthYearSelection(Month.MAY, 2020)
+    );
+    
+    Set<AwsAccount> internal = new HashSet<>(List.of(
+        new AwsAccount("12345689012", "Foo", 33.22, true, timePeriod),
+        new AwsAccount("1234568229012", "Bar", 88.22, true, timePeriod)
+    ));
+    Set<AwsAccount> external = new HashSet<>(List.of(
+        new AwsAccount("143434845689012", "ExFoo", 33.22, false, timePeriod2),
+        new AwsAccount("123456854545229012", "ExBar", 88.22, false, timePeriod2)
+    ));
+    internal.addAll(external);
+    
+    
+    AwsAccountCosts awsAccountCostsForAllAccounts =
+        new AwsAccountCosts(internal, timePeriod);
+
+    return Response.ok(awsAccountCostsForAllAccounts).build();
+  }
+
+  private YearMonth parseDate(String value) {
+    DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("YYYY-MM");
+    try {
+      return YearMonth.parse(value, dateFormatter);
+    } catch (DateTimeParseException e) {
+      throw new ClientErrorException(Status.BAD_REQUEST);
+    }
+  }
 
   @GET
   @Path("/cost/accounts")
-  public AwsAccountCostsForAllAccounts getAwsCostsByAllAccounts(@QueryParam("start") String start,
+  public Response getAwsCostsByAllAccounts(@QueryParam("start") String start,
       @QueryParam("end") String end) {
     logger.info("getAwsCostsByAllAccounts");
     logger.info("START: " + start);
     logger.info("END: " + end);
-    TimePeriod timePeriod = new TimePeriod(new MonthYearSelection(Month.APRIL, 2023),
-        new MonthYearSelection(Month.MAY, 2023));
-    Set<AwsAccountCostForPeriod> internal =
-        new HashSet<>(List.of(new AwsAccountCostForPeriod("12345689012", "Foo", 33.22, timePeriod),
-            new AwsAccountCostForPeriod("1234568229012", "Bar", 88.22, timePeriod)));
-    Set<AwsAccountCostForPeriod> external = new HashSet<>(
-        List.of(new AwsAccountCostForPeriod("143434845689012", "ExFoo", 33.22, timePeriod),
-            new AwsAccountCostForPeriod("123456854545229012", "ExBar", 88.22, timePeriod)));
-    AwsAccountCostsForAllAccounts awsAccountCostsForAllAccounts =
-        new AwsAccountCostsForAllAccounts(internal, external, timePeriod);
-    return awsAccountCostsForAllAccounts;
+
+    YearMonth startYearMonth = parseDate(start);
+    YearMonth endYearMonth = parseDate(end);
+
+    TimePeriod timePeriod = new TimePeriod(
+        new MonthYearSelection(Month.APRIL, 2023),
+        new MonthYearSelection(Month.MAY, 2023)
+    );
+    
+    TimePeriod timePeriod2 = new TimePeriod(
+        new MonthYearSelection(Month.APRIL, 2020),
+        new MonthYearSelection(Month.MAY, 2020)
+    );
+    
+    Set<AwsAccount> internal = new HashSet<>(List.of(
+        new AwsAccount("12345689012", "Foo", 33.22, true, timePeriod),
+        new AwsAccount("1234568229012", "Bar", 88.22, true, timePeriod)
+    ));
+    Set<AwsAccount> external = new HashSet<>(List.of(
+        new AwsAccount("143434845689012", "ExFoo", 33.22, false, timePeriod2),
+        new AwsAccount("123456854545229012", "ExBar", 88.22, false, timePeriod2)
+    ));
+    internal.addAll(external);
+    
+    
+    AwsAccountCosts awsAccountCostsForAllAccounts =
+        new AwsAccountCosts(internal, timePeriod);
+
+    return Response.ok(awsAccountCostsForAllAccounts).build();
   }
 
-  // @POST
-  // @Path("/widgets")
-  // public Response addWidget(Widget newWidget) {
-  // logger.info("New Widget added {}", newWidget);
-  //
-  // return Response.created(
-  // URI.create(String.format("/widgets/%d", newWidget.getId()))).build();
-  // }
-
-  // @GET
-  // @Path("/widgets/{widgetId}")
-  // public Response getWidgget(@PathParam("widgetId") int widgetId) {
-  // logger.info("getWidget {}", widgetId);
-  //
-  // if (widgetId == 1) {
-  // return Response.ok().entity(new Widget(1, "Widget 1", "The first Widget", true)).build();
-  // } else if (widgetId == 2) {
-  // return Response.ok().entity(new Widget(2, "Widget 2", "The second Widget", true)).build();
-  // } else if (widgetId == 3) {
-  // return Response.ok().entity(new Widget(3, "Widget 3", "The third Widget", true)).build();
-  // }
-  //
-  // return Response.status(Response.Status.NOT_FOUND).build();
-  // }
-
-  // @PUT
-  // @Path("/widgets/{widgetId}")
-  // public Response putWidget(Widget updatedWidget, @PathParam("widgetId") int widgetId) {
-  // logger.info("Update Widget Id {} with {}", widgetId, updatedWidget);
-  //
-  // if (!updatedWidget.getId().equals(widgetId)) {
-  // return Response.status(Response.Status.BAD_REQUEST).build();
-  // }
-  //
-  // return Response.noContent().build();
-  // }
-
+  private boolean withinRange(YearMonth start, YearMonth end, YearMonth target) {
+    return !target.isBefore(start) && !target.isAfter(end);
+  }
 }
